# production-rag-bootcamp

./: .gitignore  README.md  main.py  pyproject.toml
01_document_loaders/: document_loader_types.py
02_embeddings/: embeddings.py
03_vector_stores/: vector_stores.py
04_simple_rag_pipeline/: simple_rag_pipeline.py
05_chunking/: semantic_chunking.py  smart_chunker.py
06_hybrid_search/: prod_hybrid_search.py
07_cost_optimization/: cost_optimization.py
08_langsmith/: langsmith_setup.py
10_supabase/: 10_1_supabase_connection.py  10_2_connection_pooling.py  10_3_simple_production_rag.py
11_monitoring/: monitoring.py
